--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -76,6 +76,11 @@
                                     
                                 </ul>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" style="color: black;" asp-controller="Admins" asp-action="ListProducts">
+                                    <i class="fas fa-user me-1"></i>ListProducts
+                                </a>
+                            </li>
 
                             <li class="nav-item">
                                 <a class="nav-link" style="color: black;" asp-controller="Admins" asp-action="Profile">
